--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 				<hr>
 				<h3>About Me:</h3>
 					<h4>My hometown is Reno, NV.</h4>
+					<h4>I am a veternarian</h4>
 					<h4>My favorite color is Red.</h4>
 					<h4>My favorite food is PASTA.</h4>
 					<h4>If I could be any animal, I would be DOG.</h4>
